examples/test/testpolicy248.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy248
  namespace: namespace438
spec:
  podSelector:
    matchLabels:
      key35: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value24
      podSelector:
        matchLabels:
          key36: value19
          key48: value40
          key46: value8
